--- a/mar.html
+++ b/mar.html
@@ -23,7 +23,7 @@
     <form action="horario.html" method="get">
         <button class="btn btn4">Horario</button>
     </form>
-    <form action="Calculadora/" method="get">
+    <form action="Calculadora/Calculadora.html" method="get">
         <button class="btn btn5">Calculadora</button>
     </form>
     <form action="slide.html" method="get">
